// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create Event"
  />
   
  <div>
    <h1
      class="text-main text-3xl font-normal font-heading mb-2"
    >
      
      Create Event
    
    </h1>
     
    <!---->
     
    <form>
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Name:
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Date: (YYYY-MM-DD)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Club/ Organiser:
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Website: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Results: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Winsplits: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Routegadget: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <dropdown-input-stub
        label="League:"
        list=""
        shift="true"
        value=""
      />
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          More Information:
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <button
        class="button-lg"
      >
        Create Event
      </button>
       
      <!---->
    </form>
  </div>
   
  <!---->
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit Event"
  />
   
  <div>
    <!---->
     
    <h1
      class="text-main text-3xl font-normal font-heading mb-2"
    >
      
      Edit Event
    
    </h1>
     
    <form>
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Name:
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Date: (YYYY-MM-DD)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Club/ Organiser:
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Website: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Results: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Winsplits: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Routegadget: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <dropdown-input-stub
        label="League:"
        list=""
        shift="true"
        value=""
      />
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          More Information:
        </label>
         
        <input
          class="w-full border border-main rounded-shape px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <!---->
       
      <button
        class="button-lg"
      >
        Update Event
      </button>
    </form>
  </div>
   
  <!---->
</div>
`;
